@startuml

class solid.dip.compliant.DocumentManager {
	{field} -text : String
	{method} +addText ( paramString1 : String ) : void
	{method} +printDocument () : void
}


interface solid.dip.compliant.IPrinterService {
	{method}  {abstract} +print ( paramString1 : String ) : void
}


class solid.dip.compliant.Printer {
	{method} +print ( paramString1 : String ) : void
}


class solid.dip.violation.DocumentManager {
	{field} -text : String
	{method} +addText ( paramString1 : String ) : void
	{method} +printDocument () : void
}


class solid.dip.violation.Printer {
	{method} +print ( paramString1 : String ) : void
}


class solid.dip.violation.PrinterService {
	{method} +print ( paramString1 : String ) : void
}




solid.dip.compliant.DocumentManager -->  solid.dip.compliant.Printer : p
solid.dip.compliant.Printer ..|>  solid.dip.compliant.IPrinterService
solid.dip.violation.DocumentManager -->  solid.dip.violation.PrinterService : pService
solid.dip.violation.PrinterService -->  solid.dip.violation.Printer : printer


@enduml